--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,6 +1,6 @@
 {
-  "projectName": "react-app-template",
-  "projectOwner": "vtex-apps",
+  "projectName": "megamenu",
+  "projectOwner": "trikatechnologies",
   "repoType": "github",
   "repoHost": "https://github.com",
   "files": [
