--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,18 @@
 {
-  "vendor": "CHANGE_ME",
-  "name": "CHANGE_ME",
+  "vendor": "trika",
+  "name": "megamenu",
   "version": "0.0.0",
-  "title": "CHANGE_ME",
-  "description": "CHANGE_ME",
+  "title": "Megamenu",
+  "description": "Megamenu app for configure menus manually",
   "builders": {
     "react": "3.x",
     "messages": "1.x",
-    "docs": "0.x"
+    "docs": "0.x",
+    "store": "0.x"
   },
-  "dependencies": {},
+  "dependencies": {
+    "vtex.css-handles": "1.x"
+  },
   "registries": [
     "smartcheckout"
   ],
